--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -32,6 +32,7 @@ bind -n M-H previous-window
 bind -n M-L next-window
 
 set -g @catppuccin_flavour 'mocha'
+# set -g @catppuccin_flavour 'custom'
 #set -g @catppuccin_left_separator "█"
 set -g @catppuccin_right_separator "█"
 set -g @catppuccin_host "on"
