Update custom themes

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -31,9 +31,8 @@ bind -n S-Right next-window
 bind -n M-H previous-window
 bind -n M-L next-window
 
-set -g @catppuccin_flavour 'mocha'
-# set -g @catppuccin_flavour 'custom'
-#set -g @catppuccin_left_separator "█"
+set -g @catppuccin_flavour 'custom'
+# set -g @catppuccin_left_separator "█"
 set -g @catppuccin_right_separator "█"
 set -g @catppuccin_host "on"
 
@@ -46,6 +45,7 @@ set -g @plugin 'tmux-plugins/tmux-yank'
 
 run '~/.tmux/plugins/tpm/tpm'
 
+# transparency settings
 # transparent bottom bar background
 set -g status-bg default
 set -g status-style bg=default,fg=default
